<resources>
    <string name="app_name">Heaven Toon</string>
    <string name="app_ads_id">ca-app-pub-9389462918807647/6398836288</string> <!-- release -->
<!--    <string name="app_ads_id">ca-app-pub-3940256099942544/6300978111</string> &lt;!&ndash; dev &ndash;&gt; -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TEXT_HOME">Home</string>
    <string name="TEXT_CATEGORY">Category</string>
    <string name="TEXT_LIBRARY">Library</string>
    <string name="TEXT_ACCOUNT">Account</string>
    <string name="TEXT_USER">User</string>
    <string name="TEXT_MINE">Mine</string>
    <string name="LOGIN">Log In</string>
    <string name="LOG_OUT">Log Out</string>
    <string name="TEXT_CHANGE_PASSWORD">Change Password</string>
    <string name="APP_REVIEWS">App reviews</string>
    <string name="SHARE_FRIENDS">Share friends</string>
    <string name="MY_COMMENT">My comment</string>
    <string name="CLEAR_CACHE">Clear cache data</string>
    <string name="FEEDBACK">Feedback</string>
    <string name="TEXT_COMIC_LATEST_UPDATE">New comics updated</string>
    <string name="TEXT_ANNOUNCE">Announce</string>
    <string name="TEXT_HISTORY">History</string>
    <string name="TEXT_LIST_CHAPTERS">Chapters</string>
    <string name="TEXT_DESCRIPTION">Description</string>
    <string name="TEXT_LIST_COMMENTS">Comments</string>
    <string name="TEXT_FOLLOW">Follow</string>
    <string name="TEXT_DOWNLOADED">Downloaded</string>
    <string name="TEXT_UNFOLLOW">Unfollow</string>
    <string name="TEXT_DOWNLOAD">Download</string>
    <string name="TEXT_LOGIN">Login</string>
    <string name="TEXT_REGISTER">Register</string>
    <string name="TEXT_INPUT_USERNAME_OR_EMAIL">Username or Email</string>
    <string name="TEXT_INPUT_PASSWORD">Password</string>
    <string name="TEXT_ERROR_INPUT_USERNAME_OR_PASSWORD_EMPTY">Username or Email can not be empty</string>
    <string name="TEXT_ERROR_INPUT_PASSWORD_EMPTY">Password can not be empty</string>
    <string name="TEXT_LOGIN_SUCCESS">Login Success</string>
    <string name="TEXT_REGISTER_SUCCESS">Register Success</string>
    <string name="TEXT_CHANGE_PASSWORD_SUCCESS">Change Password Success</string>
    <string name="TEXT_FULL_NAME">Full Name</string>
    <string name="TEXT_USER_NAME">User Name</string>
    <string name="TEXT_EMAIL">Email</string>
    <string name="TEXT_PASSWORD">Password</string>
    <string name="TEXT_INPUT_CAPTCHA">Input Captcha</string>
    <string name="TEXT_FULLNAME_NOT_EMPTY">Fullname is not empty</string>
    <string name="TEXT_USERNAME_NOT_EMPTY">User Name is not empty</string>
    <string name="TEXT_EMAIL_NOT_EMPTY">Email is not empty</string>
    <string name="TEXT_PASSWORD_NOT_EMPTY">Password is not empty</string>
    <string name="TEXT_PASSWORD_MORE_6_CHAR">Password must be least 6 characters</string>
    <string name="TEXT_EMAIL_NOT_TRUE">Email is not true</string>
    <string name="TEXT_CAPTCHA_NOT_EMPTY">Captcha is not empty</string>
    <string name="TEXT_CAPTCHA_NOT_TRUE">Captcha is not true</string>
    <string name="TEXT_AUTHOR_TITLE">Authors:</string>
    <string name="TEXT_STATUS_TITLE">Status:</string>
    <string name="TEXT_VIEWS_TITLE">Views:</string>
    <string name="TEXT_CATEGORY_TITLE">Category:</string>
    <string name="TEXT_STATUS_COMPLETED">Done</string>
    <string name="TEXT_STATUS_UNCOMPLETED">Updating</string>
    <string name="TEXT_FINAL_CHAPTERS_OF_COMIC_TOAST">This is final chapter of this comic. ^_^</string>
    <string name="TEXT_FIRST_CHAPTERS_OF_COMIC_TOAST">This is first chapter of this comic. ^_^</string>
    <string name="TEXT_FAVORITE">Favorite</string>
    <string name="TEXT_RANK">Rank</string>
    <string name="TEXT_LATEST_UPDATE">Latest Update</string>
    <string name="TEXT_SEARCH">Search</string>
    <string name="TEXT_OLD_PASSWORD">Old password</string>
    <string name="TEXT_NEW_PASSWORD">New password</string>
    <string name="TEXT_CONFIRM_NEW_PASSWORD">Confirm new password</string>
    <string name="TEXT_NEWPASS_NOT_MATCH">New Password is not match</string>
    <string name="TEXT_LOG_OUT_SUCCESS">Logout Success</string>
    <string name="TEXT_COMMENT">Comment</string>
    <string name="TEXT_COMMENT_DETAILS">Comment Details</string>
    <string name="TEXT_REPLIES">Replies</string>
    <string name="TEXT_HINT_WRITE_REPLY">Write your reply ...</string>
    <string name="TEXT_RANK_DAY">Top Day</string>
    <string name="TEXT_RANK_WEEK">Top Week</string>
    <string name="TEXT_RANK_MONTH">Top Month</string>
    <string name="TEXT_RANK_ALL">All</string>
    <string name="TEXT_ALL">All</string>
    <string name="TEXT_SEND">Send</string>
    <string name="TEXT_HINT_EDITTEXT_COMMENT">Share your mind ...</string>
    <string name="TEXT_ERROR_NO_CONTENT_YET">No content yet</string>
    <string name="TEXT_ERROR_NO_LOGIN_TO_COMMENT">You need login first before write comment</string>
    <string name="TEXT_ERROR_NO_LOGIN_TO_FOLLOW_COMIC">You need login first before follow comic</string>
    <string name="TEXT_ERROR_NO_LOGIN_TO_UNFOLLOW_COMIC">You need login first before unfollow comic</string>
    <string name="TEXT_ERROR_NO_CONNECTION">Connection has been lost. Please check your connection.</string>
    <string name="TEXT_READ_NOW">Read Now</string>
    <string name="TEXT_MY_COMMENT">My comment</string>
    <string name="TEXT_CONFIRM_DELETE_COMMENT">Do you want to delete this comment ?</string>
    <string name="TEXT_COMMENT_OF_CHAP">Comment of %s</string>
    <string name="TEXT_OLDEST">Oldest</string>
    <string name="TEXT_LATEST">Latest</string>
    <string name="TEXT_CONFIRM_LOGOUT">Do you want to logout?</string>
    <string name="TEXT_CANCEL">Cancel</string>
    <string name="TEXT_STATUS">Status</string>
    <string name="TEXT_TYPE">Type</string>
    <string name="TEXT_SORT_BY">Sort by</string>
    <string name="TEXT_DONE">Done</string>
    <string name="TEXT_RESET">Reset</string>
    <string name="TEXT_CHOOSE_CHAP_TO_DOWNLOAD">Choose chap to download</string>
    <string name="TEXT_TOTAL_CHAP">Total %s</string>
    <string name="TEXT_QUANTITY_CHAP_CHOSEN">Selected %s chap</string>
    <string name="TEXT_SELECT_ALL">Select all</string>
    <string name="TEXT_DESELECT_ALL">Deselect all</string>
    <string name="TEXT_REPORT">Report</string>
    <string name="TEXT_REPORT_1">Vague pictures</string>
    <string name="TEXT_REPORT_2">Out-of-order pictures</string>
    <string name="TEXT_REPORT_3">Out-of-order chapters</string>
    <string name="TEXT_REPORT_4">Inappropriate content</string>
    <string name="TEXT_REPORT_5">Missing translation</string>
    <string name="TEXT_REPORT_6">Wrong translation</string>
    <string name="TEXT_SUBMIT">Submit</string>
    <string name="TEXT_THANK_FOR_YOUR_REPORT">Thank for your report. We will review soon.</string>
    <string name="TEXT_EDIT">Edit</string>
    <string name="TEXT_DELETE">Delete</string>
</resources>
