<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ctlFilter">
    <View
        android:id="@+id/v1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ctlInfo"
        android:background="@color/black"
        android:alpha="0.4"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlInfo"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black"
            android:text="@string/TEXT_REPORT"
            android:gravity="center"
            android:textSize="20sp"
            android:lines="1"
            android:ellipsize="end"
            android:padding="10dp"/>
        <View
            android:id="@+id/v2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#f5f5f5"/>
        <RadioGroup
            android:id="@+id/rdGroups"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v2"
            app:layout_constraintBottom_toTopOf="@+id/tvSubmit">
            <RadioButton
                android:id="@+id/rd1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:text="@string/TEXT_REPORT_1"
                android:paddingStart="10dp"
                android:textSize="@dimen/sp20"
                android:fontFamily="@font/quicksand_regular"/>
            <RadioButton
                android:id="@+id/rd2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:text="@string/TEXT_REPORT_2"
                android:paddingStart="10dp"
                android:textSize="@dimen/sp20"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/quicksand_regular"/>
            <RadioButton
                android:id="@+id/rd3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:text="@string/TEXT_REPORT_3"
                android:paddingStart="10dp"
                android:textSize="@dimen/sp20"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/quicksand_regular"/>
            <RadioButton
                android:id="@+id/rd4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:text="@string/TEXT_REPORT_4"
                android:paddingStart="10dp"
                android:textSize="@dimen/sp20"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/quicksand_regular"/>
            <RadioButton
                android:id="@+id/rd5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:text="@string/TEXT_REPORT_5"
                android:paddingStart="10dp"
                android:textSize="@dimen/sp20"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/quicksand_regular"/>
            <RadioButton
                android:id="@+id/rd6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:text="@string/TEXT_REPORT_6"
                android:paddingStart="10dp"
                android:textSize="@dimen/sp20"
                android:layout_marginTop="@dimen/dp10"
                android:fontFamily="@font/quicksand_regular"/>
        </RadioGroup>
        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp55"
            android:layout_weight="2"
            android:background="@drawable/bg_btn_submit_report_disable"
            android:fontFamily="@font/quicksand_regular"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/dp30"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginEnd="@dimen/dp30"
            android:text="@string/TEXT_SUBMIT"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="@dimen/sp22"
            android:lines="1"
            android:ellipsize="end"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>