<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.login.LoginFragment">
    <EditText
        android:id="@+id/edtOldPass"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp80"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp50"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:padding="@dimen/dp20"
        android:hint="@string/TEXT_OLD_PASSWORD"
        android:background="@drawable/bg_edit_text_input_login"
        android:inputType="textPassword"
        android:lines="1"/>

    <EditText
        android:id="@+id/edtNewPass"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp80"
        app:layout_constraintTop_toBottomOf="@+id/edtOldPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:padding="@dimen/dp20"
        android:hint="@string/TEXT_NEW_PASSWORD"
        android:background="@drawable/bg_edit_text_input_login"
        android:inputType="textPassword"
        android:lines="1" />

    <EditText
        android:id="@+id/edtConfirmNewPass"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp80"
        app:layout_constraintTop_toBottomOf="@+id/edtNewPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginStart="@dimen/dp20"
        android:layout_marginEnd="@dimen/dp20"
        android:padding="@dimen/dp20"
        android:hint="@string/TEXT_CONFIRM_NEW_PASSWORD"
        android:background="@drawable/bg_edit_text_input_login"
        android:inputType="textPassword"
        android:lines="1" />

    <com.rey.material.widget.Button
        android:id="@+id/btnChangePass"
        style="@style/btn_ripple_normal_0"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp70"
        android:layout_marginTop="@dimen/dp60"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/TEXT_CHANGE_PASSWORD"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sp24"
        android:lines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="@+id/edtConfirmNewPass"
        app:layout_constraintStart_toStartOf="@+id/edtConfirmNewPass"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmNewPass" />
</androidx.constraintlayout.widget.ConstraintLayout>