<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.choose_chap_to_download_image.ChooseChapToDownloadImageFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlHeader"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvTotalChap"
            android:layout_width="@dimen/dp150"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/TEXT_TOTAL_CHAP"
            android:textSize="@dimen/sp18"
            android:fontFamily="@font/quicksand_regular"
            android:padding="@dimen/dp5"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/tvTotalChap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTotalChap"
            app:layout_constraintBottom_toBottomOf="@+id/tvTotalChap"
            android:orientation="horizontal"
            android:gravity="end"
            android:padding="@dimen/dp10">
            <TextView
                android:id="@+id/tvLatest"
                style="@style/normal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TEXT_LATEST"
                android:textSize="@dimen/sp22"
                android:layout_marginEnd="@dimen/dp10"
                android:textColor="#d75c3b"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#cfcfcf"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"/>
            <TextView
                android:id="@+id/tvOldest"
                style="@style/normal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TEXT_OLDEST"
                android:textSize="@dimen/sp22"
                android:textColor="#969696"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListChapter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ctlHeader"
        app:layout_constraintBottom_toTopOf="@+id/ctlFooter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/dp10"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlFooter"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp120"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="@dimen/dp10"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/tvQuantityChoose"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp35"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="@dimen/dp20"
            android:paddingEnd="@dimen/dp20"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="@dimen/sp20"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/TEXT_QUANTITY_CHAP_CHOSEN"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>